<resources>
    <string name="app_name">TiketSaya</string>
    <string name="slogan">Wisata Jadi Lebih Asyik!</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="name_label">Nama</string>
    <string name="bio_label">Bio</string>
</resources>
